--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/chrkaatz/the-snap.git"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">= 14.x"
   },
   "keywords": [],
   "author": "Christian Kaatz",
@@ -40,7 +40,7 @@
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.3.1",
     "pino": "^6.9.0",
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^9.1.1"
   },
   "devDependencies": {
     "apidoc": "0.28.1",
