--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - "traefik.http.routers.snap.rule=Host(`${DOMAIN}`)"
       - "traefic.http.routers.snap.entrypoint=websecure"
       - "traefik.http.routers.snap.tls.certresolver=${CERT_RESOLVER}"
+      - "traefik.http.middlewares.snap-ipwhitelist.ipwhitelist.sourcerange=138.68.120.122,78.159.101.157,87.27.49.250"
+      - "traefik.http.routers.snap.middlewares=snap-ipwhitelist@docker"      
     networks:
       - default
       - gw
