--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -1,15 +1,18 @@
 {
-  "name": "The Snap Documentation",
+  "name": "SNAP API documentation",
   "title": "The Snap Documentation",
   "url": "https://snap.openpolis.io/api",
-  "description": "A simple service to create screenshots and PDFs from unauthenticated accessible websites",
+  "description": "API for the Snap @ openpolis",
   "version": "1.0.0",
   "sampleUrl": "https://snap.openpolis.io/api",
+  "template": {
+    "forceLanguage": "en"
+  },
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2021-06-01T12:58:16.267Z",
+    "time": "2021-06-01T13:09:43.618Z",
     "url": "https://apidocjs.com",
     "version": "0.28.1"
   }
